versioned_docs/version-3.1.0/readme.mdx
---
title: Lisez-moi
slug: /
---

import DocCard from '@theme/DocCard';

Cette documentation a pour but de vous expliquer le fonctionnement de RaidProtect. N’hésitez pas à nous faire parvenir vos commentaires afin que nous puissions l’améliorer.
N'oubliez pas de [rejoindre notre serveur Discord](https://raidprotect.bot/discord) pour être informé des nouveautés sur le projet. Vous pourrez également contacter notre équipe de support qui répondra à vos questions sur l'utilisation du bot. 😄

## 🚀 Débuter avec RaidProtect {#start}

Pour commencer à utiliser RaidProtect, il vous suffit de l'inviter sur votre serveur en utilisant le lien suivant.

<DocCard item={{ type: 'link', href: 'https://raidprotect.bot/invite', label: 'Inviter RaidProtect' }} />
<br />

:::danger
Attention, des **copies du bot** circulent en **utilisant le nom de RaidProtect**, invitez-le uniquement depuis notre site officiel.
:::

### Prérequis {#requirement}

Afin d'assurer le bon fonctionnement de RaidProtect :
1. **Accordez la permission Administrateur** à RaidProtect. Cela lui permet de modérer automatiquement tous vos salons.
2. **Placez son rôle au niveau de celui des administrateurs** de votre serveur. Le système de permissions ne permet pas à RaidProtect de sanctionner les utilisateurs ayant un rôle au-dessus de lui.

### Installation {#install}

Une fois RaidProtect ajouté à votre serveur, exécutez la commande [`/setup`](./setup.md#install).

<DocCard item={{ type: 'link', href: '/docs/3.1.0/setup', docId: 'setup', label: 'Installation guidée' }} />
<br />

:::note
Pour les moins téméraires (ou les plus pressés), vous pouvez simplement lire les indications de la [commande `/setup`](./setup.md#recommended) qui récapitule les principales informations de chaque fonctionnalités.
:::

### Utilisation {#use}

Consultez les différentes sections de cette documentation pour découvrir toutes les fonctionnalités offertes par RaidProtect.

<DocCard item={{ type: 'link', href: '/docs/3.1.0/language', docId: 'language', label: 'Langues disponibles' }} />
<br />
<DocCard item={{ type: 'category', href: '/docs/3.1.0/features', label: 'Les fonctionnalités', description: 'Les documentations de chacune de nos fonctionnalités.' }} />
<br />
<DocCard item={{ type: 'category', href: '/docs/3.1.0/guides', label: 'Nos guides', description: 'Des guides pour vous aider au mieux.' }} />
<br />
<DocCard item={{ type: 'category', href: '/docs/3.1.0/useful-links', label: 'Liens utiles', description: 'Les divers liens utiles de RaidProtect.' }} />
<br />